# BeamForge-OPA

./: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
beamforge-opa/: Dockerfile  inference.py  models.py
beamforge-opa/server/: environment.py
server/: app.py
